New preference: enable all compiler warnings, off by default. Fixes #1728 and #2415. Also affects #2634 and #2207